<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="192dp"
        android:layout_height="27dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/connect_to_a_server"
        android:textSize="20sp"
        android:id="@+id/connectTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ip"
        android:layout_width="281dp"
        android:layout_height="48dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="163dp"
        android:hint="@string/enter_an_ip"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/port"
        android:layout_width="282dp"
        android:layout_height="50dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="257dp"
        android:hint="@string/port"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/username"
        android:layout_width="282dp"
        android:layout_height="48dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="352dp"
        android:hint="@string/enter_a_username"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="240dp"
        android:layout_height="72dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="480dp"
        android:text="@string/connect"
        android:onClick="connectButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>