<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible">

    <EditText
        android:id="@+id/editText"

        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_marginBottom="76dp"
        android:autofillHints=""
        android:clickable="false"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/messages_here"
        android:textAlignment="textStart"
        android:visibility="visible"
        tools:ignore="MissingConstraints, LabelFor" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/username2"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="680dp"
        android:hint="@string/message"
        android:labelFor="@id/username2"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:visibility="visible" />

    <Button
        android:id="@+id/button_gchat_send"
        android:layout_width="123dp"
        android:layout_height="106dp"
        android:layout_marginStart="323dp"
        android:layout_marginTop="680dp"
        android:background="@color/teal_200"
        android:enabled="true"
        android:text="@string/send"
        android:textColor="#5E35B1"
        android:visibility="visible" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/layout_group_chat"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/black"
            android:fontFamily="sans-serif-black"
            android:text="@string/v_1_0"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:visibility="visible" />

    </com.google.android.material.appbar.AppBarLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>